--- a/app/src/App.css
+++ b/app/src/App.css
@@ -17,3 +17,38 @@ main {
     margin: auto;
     min-height: 100vh;
 }
+
+table {
+    border-collapse: collapse;
+}
+
+td {
+    padding: 1rem;
+    line-height: 2rem;
+}
+
+thead tr {
+    background-color: darkslategrey;
+    color: #dddddd;
+    position: sticky;
+    top: 0;
+}
+
+tbody tr {
+    background-color: #dddddd;
+    transition: all 0.1s ease;
+}
+
+tbody tr:hover {
+    background-color: darkslategrey;
+    color: #dddddd
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    cursor:pointer;  
+}
