--- a/app/src/App.css
+++ b/app/src/App.css
@@ -37,6 +37,7 @@ thead tr {
 tbody tr {
     background-color: #dddddd;
     transition: all 0.1s ease;
+    border-bottom: 1px solid white;
 }
 
 tbody tr:hover {
